# haskell_tables

./: .gitignore  LICENSE  README.md  stack.yaml  tables.cabal
src/: Main.hs  main.hs
