name:                tables
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aidanprior/haskell_tables#readme
license:             BSD3
license-file:        LICENSE
author:              Aidan Prior
maintainer:          priorlyaidan@yahoo.com
copyright:           2020 Aidan Prior
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tables
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, random-shuffle, containers, text
